@@ -100,5 +100,34 @@
             <version>1.10.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+             <groupId>net.bytebuddy</groupId>
+             <artifactId>byte-buddy-agent</artifactId>
+             <version>1.10.10</version>
+             <scope>test</scope>
+         </dependency>
     </dependencies>
+         
+   <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.21.0</version>
+            <configuration>
+                   <argLine>
+                           -Djdk.attach.allowAttachSelf=true -XX:+StartAttachListener
+                   </argLine>
+             </configuration>
+         </plugin>
+    </plugins>
+</build>
 </project>
